latest deals header and see all deals aligned correctly

--- a/Assets/stylesheets/styles.css
+++ b/Assets/stylesheets/styles.css
@@ -189,7 +189,7 @@ header {
 }
 .latest-deals {
   position: relative;
-  margin-left: 3rem;
+  margin-left: 2rem;
   color: red;
   font-size: 2.5rem;
 }
@@ -199,7 +199,7 @@ header {
 }
 .see-all-deals {
   position: relative;
-  margin-right: 4rem;
+  margin-right: 6rem;
   margin-top: 3rem;
   font-weight: bold;
   color: red;
